<resources>
    <string name="app_name">Digital Keyboard</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="total">=</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="text_one">Калькулятор</string>
    <string name="_darck">Темная тема</string>
    <string name="orientation_mode">Инженерный калькулятор</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="email_users">Email Users</string>
    <string name="phone_number">Phone number</string>
</resources>