<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"></CalendarView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_text_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:inputType="text|phone"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_text_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:inputType="textEmailAddress"
            android:text="@string/email_users"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_text_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="24"
                android:inputType="text"
                android:text="@string/login"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_text_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="24"
                android:inputType="text|numberPassword"
                android:text="@string/password"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>